--- a/e2e/transactions/SendNft.yaml
+++ b/e2e/transactions/SendNft.yaml
@@ -38,8 +38,7 @@ tags:
       - waitForAnimationToEnd:
           timeout: 2000
 
-      - tapOn:
-          id: 'send-action-button'
+      - tapOn: '.*Send'
 
       # Test ENS address input
       - inputText: 'rainbowwallet.eth'
