--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -8,19 +8,18 @@ on:
     branches:
       - develop
 jobs:
-  # iOS build and e2e tests
-  e2e-ios:
+  # iOS build job
+  build-ios:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ["self-hosted"]
     concurrency:
-      # For pushes on develop run for every commit, but for PRs cancel in-progress runs.
-      group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.ref || github.sha }}
+      group: ${{ github.workflow }}-build-${{ github.event_name == 'pull_request' && github.ref || github.sha }}
       cancel-in-progress: true
     permissions:
       contents: read
-    timeout-minutes: 90
-    env:
-      ARTIFACTS_FOLDER: e2e-artifacts
+    timeout-minutes: 45
+    outputs:
+      artifact-id: ${{ steps.rnef-remote-build-ios.outputs.artifact-id }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -31,9 +30,11 @@ jobs:
       - name: Set sanitized branch name
         id: sanitize
         run: echo "SANITIZED_REF_NAME=${GITHUB_REF_NAME//\//-}" >> $GITHUB_ENV
+      
       - name: Get Yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+      
       - name: Cache Yarn dependencies
         uses: actions/cache@v4
         with:
@@ -41,10 +42,11 @@ jobs:
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
             .yarn/cache
             .yarn/install-state.gz
-            !.eslintcache # Exclude eslint cache
+            !.eslintcache
           key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      
       - name: Set up ENV vars & scripts
         env:
           CI_SCRIPTS: ${{ secrets.CI_SCRIPTS }}
@@ -53,19 +55,21 @@ jobs:
           git clone git@github.com:rainbow-me/rainbow-env.git
           mv rainbow-env/dotenv .env && rm -rf rainbow-env
           eval $CI_SCRIPTS
+      
       - name: Checkout Janic branch for now
         run: cd rainbow-scripts && git checkout @janic/rn79
+      
       - name: Install dependencies
         run: |
           yarn install && yarn setup
 
-      - name: Modify env
+      - name: Modify env for testing
         run: |
           sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e
 
       - name: RNEF Remote Build - iOS simulator
         id: rnef-remote-build-ios
-        uses: callstackincubator/ios@v1
+        uses: callstackincubator/ios@v2
         with:
           scheme: Rainbow
           destination: simulator
@@ -73,19 +77,48 @@ jobs:
           configuration: Debug
           comment-bot: false
 
+  # iOS e2e tests job
+  e2e-ios:
+    needs: build-ios
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
+    runs-on: ["self-hosted"]
+    concurrency:
+      group: ${{ github.workflow }}-e2e-${{ github.event_name == 'pull_request' && github.ref || github.sha }}
+      cancel-in-progress: true
+    permissions:
+      contents: read
+    timeout-minutes: 60
+    env:
+      ARTIFACTS_FOLDER: e2e-artifacts
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up github keys
+        run: git config core.sshCommand "ssh -i ~/.ssh/id_ed25519 -F /dev/null"
+
+      - name: Set up ENV vars & scripts
+        env:
+          CI_SCRIPTS: ${{ secrets.CI_SCRIPTS }}
+        run: |
+          source ~/.zshrc
+          git clone git@github.com:rainbow-me/rainbow-env.git
+          mv rainbow-env/dotenv .env && rm -rf rainbow-env
+          eval $CI_SCRIPTS
+
+      - name: Modify env for testing
+        run: |
+          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e
+
       - name: Download and Unpack IPA artifact
         run: |
-          curl -L -H "Authorization: token ${{ github.token }}" -o artifact.zip "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ steps.rnef-remote-build-ios.outputs.artifact-id }}/zip"
+          curl -L -H "Authorization: token ${{ github.token }}" -o artifact.zip "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ needs.build-ios.outputs.artifact-id }}/zip"
           unzip artifact.zip -d downloaded-artifacts
           ls -l downloaded-artifacts
           APP_ARCHIVE_PATH=$(find downloaded-artifacts -name "*.tar.gz" -print -quit)
           tar -xzf "$APP_ARCHIVE_PATH" -C downloaded-artifacts
           APP_PATH=$(find downloaded-artifacts -name "*.app" -type d | head -n 1)
           echo "ARTIFACT_PATH_FOR_E2E=$APP_PATH" >> $GITHUB_ENV
-
-      - name: Modify env
-        run: |
-          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e
 
       - name: Install Maestro
         run: export MAESTRO_VERSION=1.41.0; curl -fsSL "https://get.maestro.mobile.dev" | bash
@@ -95,6 +128,7 @@ jobs:
         with:
           model: 'iPhone 16'
           wait_for_boot: true
+      
       - name: Ensure Simulator is fully booted
         run: |
           echo "Waiting for simulator to be fully booted..."
@@ -109,6 +143,7 @@ jobs:
             fi
           done
           echo "Simulator is ready."
+      
       - name: Run Tests
         run: ./scripts/e2e-ios-ci.sh
         env:
