--- a/e2e/transactions/SwapERC20Transaction.yaml
+++ b/e2e/transactions/SwapERC20Transaction.yaml
@@ -21,102 +21,105 @@ tags:
   - wallet
   - parallel
 ---
-# - retry:
-#     maxRetries: 0
-#     commands:
-- launchApp:
-    clearState: true
-    clearKeychain: true
-    arguments:
-      isE2ETest: true
-- runFlow: ../utils/Prepare.yaml
-- runFlow: ../utils/ImportWalletWithKey.yaml
-
-# Send ETH to test wallet
-- tapOn:
-    id: fund-test-wallet-button
-
-# Connect to Anvil (test network)
-- tapOn:
-    id: dev-button-anvil
-
-# Open swap screen
-- tapOn:
-    id: swap-button
-- assertVisible:
-    id: swap-screen
-# Select DAI as output token
-- tapOn: 'Find a token to buy'
-- inputText: 'DAI'
-- hideKeyboard
-- tapOn:
-    id: token-to-buy-dai-1
-- assertVisible: 'DAI.*'
-
-# Execute Swap
-- longPressOn:
-    id: swap-bottom-action-button
-- runFlow: ../utils/MaybeSetupPin.yaml
-
-# On Android, pull to refresh
-- runFlow:
-    when:
-      platform: Android
+- retry:
+    maxRetries: 3
     commands:
-      - swipe:
-          from:
-            id: wallet-screen
-          direction: down
+      - launchApp:
+          clearState: true
+          clearKeychain: true
+          arguments:
+            isE2ETest: true
+      - runFlow: ../utils/Prepare.yaml
+      - runFlow: ../utils/ImportWalletWithKey.yaml
 
-# Copy the balance before the swap
-- copyTextFrom:
-    id: balance-coin-row-value-Dai
-- evalScript: ${output.beforeValue = maestro.copiedText}
+      # Send ETH to test wallet
+      - tapOn:
+          id: fund-test-wallet-button
 
-# Open Discover screen select DAI then go to swap screen
-- tapOn:
-    id: 'tab-bar-icon-DiscoverScreen'
-- tapOn:
-    id: discover-search-icon
-- assertVisible:
-    id: done-button
-- inputText: 'DAI'
-- tapOn:
-    id: discover-currency-select-list-exchange-coin-row-DAI-1
-- assertVisible:
-    id: chart-header-Dai
-- tapOn:
-    id: swap-action-button
-# Execute Swap
-- longPressOn:
-    id: swap-bottom-action-button
-- runFlow: ../utils/MaybeSetupPin.yaml
+      # Connect to Anvil (test network)
+      - tapOn:
+          id: dev-button-anvil
 
-# On Android, pull to refresh
-- runFlow:
-    when:
-      platform: Android
-    commands:
-      - swipe:
-          from:
-            id: wallet-screen
-          direction: down
+      # Open swap screen
+      - tapOn:
+          id: swap-button
+      - assertVisible:
+          id: swap-screen
+      # Select DAI as output token
+      - tapOn: 'Find a token to buy'
+      - inputText: 'DAI'
+      - hideKeyboard
+      - tapOn:
+          id: token-to-buy-dai-1
+      - assertVisible: 'DAI.*'
 
-# Copy the balance after the swap
-- copyTextFrom:
-    id: balance-coin-row-value-Dai
-- evalScript: ${output.afterValue = maestro.copiedText}
+      # Execute Swap
+      - longPressOn:
+          id: swap-bottom-action-button
+      - runFlow: ../utils/MaybeSetupPin.yaml
 
-# Check if the balance went down post swap
-- runFlow:
-    when:
-      true: ${output.beforeValue > output.afterValue}
-    commands:
-      - evalScript: ${console.log('Held balance went down after a swap!')}
+      # On Android, pull to refresh
+      - retry:
+          maxRetries: 3
+          commands:
+            - runFlow:
+                when:
+                  platform: Android
+                commands:
+                  - swipe:
+                      from:
+                        id: wallet-screen
+                      direction: down
+                  # Copy the balance before the swap
+                  - copyTextFrom:
+                      id: balance-coin-row-value-Dai
+                  - evalScript: ${output.beforeValue = maestro.copiedText}
 
-# Compare the values:
-- runFlow:
-    when:
-      true: ${output.beforeValue <= output.afterValue}
-    commands:
-      - evalScript: ${console.log("Balance didnt go down after swap! Values are beforeValue - " + output.beforeValue + ", afterValue - " + output.afterValue)}
+      # Open Discover screen select DAI then go to swap screen
+      - tapOn:
+          id: 'tab-bar-icon-DiscoverScreen'
+      - tapOn:
+          id: discover-search-icon
+      - assertVisible:
+          id: done-button
+      - inputText: 'DAI'
+      - tapOn:
+          id: discover-currency-select-list-exchange-coin-row-DAI-1
+      - assertVisible:
+          id: chart-header-Dai
+      - tapOn:
+          id: swap-action-button
+      # Execute Swap
+      - longPressOn:
+          id: swap-bottom-action-button
+      - runFlow: ../utils/MaybeSetupPin.yaml
+
+      - retry:
+          maxRetries: 3
+          commands:
+            - runFlow:
+                when:
+                  platform: Android
+                commands:
+                  - swipe:
+                      from:
+                        id: wallet-screen
+                      direction: down
+                  # Copy the balance after the swap
+                  - copyTextFrom:
+                      id: balance-coin-row-value-Dai
+                  - evalScript: ${output.afterValue = maestro.copiedText}
+
+      # Check if the balance went down post swap
+      - runFlow:
+          when:
+            true: ${output.beforeValue > output.afterValue}
+          commands:
+            - evalScript: ${console.log('Held balance went down after a swap!')}
+
+      # Compare the values:
+      - runFlow:
+          when:
+            true: ${output.beforeValue <= output.afterValue}
+          commands:
+            - evalScript: ${console.log("Balance didnt go down after swap! Values are beforeValue - " + output.beforeValue + ", afterValue - " + output.afterValue)}
