--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "@ethersproject/transactions": "5.7.0",
     "@ethersproject/units": "5.7.0",
     "@ethersproject/wallet": "5.7.0",
-    "@gorhom/bottom-sheet": "5.1.6",
+    "@gorhom/bottom-sheet": "5.1.8",
     "@json-rpc-tools/utils": "1.7.6",
     "@lavamoat/preinstall-always-fail": "2.0.0",
     "@ledgerhq/hw-app-eth": "6.39.0",
@@ -252,7 +252,7 @@
     "react-native-quick-md5": "3.0.6",
     "react-native-radial-gradient": "rainbow-me/react-native-radial-gradient#b99ab59d27dba70364ef516bd5193c37657ba95c",
     "react-native-randombytes": "3.5.3",
-    "react-native-reanimated": "3.18.0",
+    "react-native-reanimated": "4.0.1",
     "react-native-redash": "16.3.0",
     "react-native-restart": "0.0.22",
     "react-native-safe-area-context": "5.4.0",
@@ -279,6 +279,7 @@
     "react-native-vision-camera": "4.6.4",
     "react-native-webview": "13.13.5",
     "react-native-widgetkit": "1.0.9",
+    "react-native-worklets": "0.4.0",
     "react-navigation-backhandler": "2.0.3",
     "react-primitives": "0.8.1",
     "react-redux": "7.2.1",
