--- a/e2e/screens/MaliciousDappTransactionWarning.yaml
+++ b/e2e/screens/MaliciousDappTransactionWarning.yaml
@@ -15,8 +15,10 @@ tags:
       - runFlow: ../utils/ImportWalletWithKey.yaml
 
       # Navigate to browser
+      - runScript:
+          file: ../utils/coordinates.js
       - tapOn:
-          id: 'tab-bar-icon-DappBrowserScreen'
+          point: ${output.tabCoordinates.browserTab}
       - assertVisible:
           id: browser-screen
       - runFlow:
