Remove retry blocks

--- a/e2e/flows/onboarding/SecretPhraseWallet.yaml
+++ b/e2e/flows/onboarding/SecretPhraseWallet.yaml
@@ -3,13 +3,10 @@ tags:
   - auth
   - parallel
 ---
-- retry:
-    maxRetries: 3
-    commands:
-      - launchApp:
-          clearState: true
-          clearKeychain: true
-          arguments:
-            isE2ETest: true
-      - runFlow: ../utils/Prepare.yaml
-      - runFlow: ../utils/ImportSecretPhrase.yaml
+- launchApp:
+    clearState: true
+    clearKeychain: true
+    arguments:
+      isE2ETest: true
+- runFlow: ../../utils/Prepare.yaml
+- runFlow: ../../utils/ImportSecretPhrase.yaml
