--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "setup": "yarn graphql-codegen:install && yarn ds:install && yarn allow-scripts && yarn graphql-codegen && yarn fetch:networks",
     "setup-ci": "./scripts/setup-ci.sh",
     "adb-all": "adb devices | tail -n +2 | cut -sf 1 | xargs -I {} adb -s {}",
-    "android": "yarn uninstall:android && rnef run:android --main-activity MainActivityog --local",
+    "android": "react-native run-android --main-activity MainActivityog",
     "android:apk": "yarn gradle assembleRelease && yarn uninstall:android && yarn android:load-apk",
     "android-all:apk": "yarn gradle assembleRelease && yarn uninstall:android && yarn android-all:load-apk",
     "android:bundle": "./scripts/check-env.sh && yarn gradle bundleRelease && open android/app/build/outputs/bundle/release/",
@@ -35,7 +35,7 @@
     "install-pods-fast": "cd ios && bundle exec pod install && cd ..",
     "install-pods-fast-jsc": "cd ios && bundle exec env USE_HERMES=NO pod install && cd ..",
     "install-pods-no-flipper": "cd ios && bundle exec env SKIP_FLIPPER=true pod install --repo-update && cd ..",
-    "ios": "rnef run:ios --scheme Rainbow --configuration Debug --device \"iPhone 16 Pro\" --local",
+    "ios": "react-native run-ios --simulator='iPhone 16 Pro'",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "yarn format:check && yarn lint:ts && yarn lint:js",
@@ -44,7 +44,7 @@
     "lint:js:ci": "eslint --quiet",
     "lint:ts": "yarn tsc --skipLibCheck --noEmit",
     "postinstall": "./scripts/postinstall.sh",
-    "start": "yarn rnef start",
+    "start": "react-native start --client-logs",
     "start:clean": "yarn clean:packager && yarn start --reset-cache",
     "test": "jest --detectOpenHandles --forceExit",
     "ts-coverage": "typescript-coverage-report",
@@ -319,13 +319,16 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@lavamoat/allow-scripts": "3.0.1",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.0",
     "@react-native/metro-config": "0.79.0",
     "@react-native/typescript-config": "0.79.0",
-    "@rnef/cli": "0.7.26",
-    "@rnef/platform-android": "0.7.26",
-    "@rnef/platform-ios": "0.7.26",
-    "@rnef/plugin-metro": "0.7.26",
+    "@rnef/cli": "0.8.7",
+    "@rnef/platform-android": "0.8.7",
+    "@rnef/platform-ios": "0.8.7",
+    "@rnef/plugin-metro": "0.8.7",
     "@testing-library/react-native": "11.2.0",
     "@types/chroma-js": "2.1.3",
     "@types/d3-scale": "4.0.2",
