--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.33.4",
     "@legendapp/list": "1.1.4",
     "@metamask/eth-sig-util": "7.0.2",
+    "@nktkas/hyperliquid": "0.24.0",
     "@notifee/react-native": "7.8.2",
     "@rainbow-me/provider": "0.1.2",
     "@rainbow-me/react-native-animated-number": "0.0.2",
