--- a/e2e/transactions/SwapTransaction.yaml
+++ b/e2e/transactions/SwapTransaction.yaml
@@ -91,7 +91,7 @@ tags:
             - runScript:
                 file: ../utils/coordinates.js
             - tapOn:
-                point: ${output.tabCoordinates.profileTab}
+                point: ${output.tabCoordinates.activityTab}
 
             # ios view hierarchy takes too long to load, so some of the elements are loaded
             # at signifigantly differnt times than expected... this works fine on Android.
