--- a/e2e/transactions/SendNft.yaml
+++ b/e2e/transactions/SendNft.yaml
@@ -33,13 +33,29 @@ tags:
           maxRetries: 3
           commands:
             - swipe:
+                from:
+                  id: wallet-screen
                 direction: UP
             - assertVisible: '.*Rainbow Pooly.*'
 
-      - tapOn: '.*Rainbow Pooly.*'
+      - retry:
+          maxRetries: 3
+          commands:
+            - swipe:
+                from:
+                  id: wallet-screen
+                direction: UP
+            - tapOn: '.*Rainbow Pooly.*'
 
-      - tapOn:
-          id: 'wrapped-nft-Rainbow Pooly 104'
+      - retry:
+          maxRetries: 3
+          commands:
+            - swipe:
+                from:
+                  id: wallet-screen
+                direction: UP
+            - tapOn:
+                id: 'wrapped-nft-Rainbow Pooly 104'
 
       # we need to wait for the sheet to be done before clicking on the send else Maestro will click on the image
       - waitForAnimationToEnd:
