--- a/e2e/transactions/SendNft.yaml
+++ b/e2e/transactions/SendNft.yaml
@@ -33,22 +33,39 @@ tags:
           maxRetries: 3
           commands:
             - swipe:
+                from:
+                  id: wallet-screen
                 direction: UP
             - assertVisible: '.*Rainbow Pooly.*'
 
-      - tapOn: '.*Rainbow Pooly.*'
+      - retry:
+          maxRetries: 3
+          commands:
+            - swipe:
+                from:
+                  id: wallet-screen
+                direction: UP
+            - tapOn: '.*Rainbow Pooly.*'
 
-      # Need to scroll a bit more after expanding the section.
-      - swipe:
-          direction: UP
-
-      - tapOn:
-          id: 'wrapped-nft-Rainbow Pooly 104'
+      - retry:
+          maxRetries: 3
+          commands:
+            - swipe:
+                from:
+                  id: wallet-screen
+                direction: UP
+            - tapOn:
+                id: 'wrapped-nft-Rainbow Pooly 104'
 
       # we need to wait for the sheet to be done before clicking on the send else Maestro will click on the image
       - waitForAnimationToEnd:
           timeout: 2000
 
+      - retry:
+          maxRetries: 3
+          commands:
+            - assertVisible:
+                id: 'send-action-button'
       - tapOn:
           id: 'send-action-button'
 
