Brody/fix e2e tests tab bar (#6785)
* record debug

* okay fix e2e

* clean up

* clean

* clean

* tweaks

* oopsie wrong tab name

* fix test slippage changes

* fix retry

* @janicduplessis  fix from #6786

* Revert "@janicduplessis  fix from #6786"

This reverts commit 8eb200c61b1e0c6a882f63bec660c5bdc360063d.

--- a/e2e/screens/Discover.yaml
+++ b/e2e/screens/Discover.yaml
@@ -19,8 +19,10 @@ tags:
           direction: LEFT
       - assertVisible:
           id: discover-header
+      - runScript:
+          file: ../utils/coordinates.js
       - tapOn:
-          id: tab-bar-icon-ProfileScreen
+          point: ${output.tabCoordinates.activityTab}
       - assertVisible:
           id: profile-screen
       - swipe:
@@ -28,7 +30,7 @@ tags:
       - assertVisible:
           id: points-screen
       - tapOn:
-          id: tab-bar-icon-DiscoverScreen
+          point: ${output.tabCoordinates.discoverTab}
       - assertVisible:
           id: discover-header
 
