--- a/e2e/transactions/SendNft.yaml
+++ b/e2e/transactions/SendNft.yaml
@@ -88,11 +88,15 @@ tags:
             - longPressOn: 'Hold to Send'
             - runFlow: ../utils/MaybeSetupPin.yaml
 
-            # Test transaction was done
-            - assertVisible: 'Pending'
-            - assertVisible: 'Sending.*'
-
-            - tapOn: Sending.*
+            - assertVisible: 'Sending'
+            - assertVisible: 'Rainbow Pooly 104'
+            # Open toast
+            - tapOn:
+                id: toast-.*
+            - assertVisible: 'Sending'
+            - assertVisible: 'Rainbow Pooly'
+            - tapOn:
+                id: toast-expanded-.*
 
             - assertVisible: 'Sending'
             - assertVisible: '.*Tx Hash.*'
