--- a/e2e/transactions/SendTransaction.yaml
+++ b/e2e/transactions/SendTransaction.yaml
@@ -78,10 +78,15 @@ tags:
             - runFlow: ../utils/MaybeSetupPin.yaml
 
             # Test transaction was done
-            - assertVisible: 'Pending'
-            - assertVisible: 'Sending*.'
-
-            - tapOn: Sending*.
+            - assertVisible: 'Sending'
+            - assertVisible: '20.00 ETH'
+            # Open toast
+            - tapOn:
+                id: toast-.*
+            - assertVisible: 'Sending'
+            - assertVisible: '20.00 ETH'
+            - tapOn:
+                id: toast-expanded-.*
 
             - assertVisible: 'Sending'
             - assertVisible: '.*Tx Hash*.'
